Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.12.0
-
ghx-label-5
Description
Root causing block corruption is difficult because the Status message doesn't have the offending disk and host.
Query Type: QUERY Query State: EXCEPTION Query Status: Block verification failure
Status TmpFileMgr::WriteHandle::CheckHashAndDecrypt(MemRange buffer) { DCHECK(FLAGS_disk_spill_encryption); SCOPED_TIMER(encryption_timer_); // GCM mode will verify the integrity by itself if (!key_.IsGcmMode()) { if (!hash_.Verify(buffer.data(), buffer.len())) { return Status("Block verification failure"); } } return key_.Decrypt(buffer.data(), buffer.len(), buffer.data()); }