IMPALA-6892: CheckHashAndDecrypt() includes file and host

The error text with AES-GCM enabled looks like:

  Error reading 44 bytes from scratch file
  '/tmp/impala-scratch/0:0_d43635d0-8f55-485e-8899-907af289ac86' on
  backend tarmstrong-box:22000 at offset 0: verification of read data
  failed.
  OpenSSL error in EVP_DecryptFinal:
  139634997483216:error:0607C083:digital envelope
  routines:EVP_CIPHER_CTX_ctrl:no cipher set:evp_enc.c:610:
  139634997483216:error:0607C083:digital envelope
  routines:EVP_CIPHER_CTX_ctrl:no cipher set:evp_enc.c:610:
  139634997483216:error:0607C083:digital envelope
  routines:EVP_CIPHER_CTX_ctrl:no cipher set:evp_enc.c:610:
  139634997483216:error:0607C083:digital envelope
  routines:EVP_CIPHER_CTX_ctrl:no cipher set:evp_enc.c:610:

Testing:
Added a backend test to exercise the code path and verify the error
code.

Change-Id: I0652d6cdfbb4e543dd0ca46b7cc65edc4e41a2d8
Reviewed-on: http://gerrit.cloudera.org:8080/10204
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-on: http://gerrit.cloudera.org:8080/10232